# toucan-connectors

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  =3.7.4  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.IN  MANIFEST.in  Makefile  Pipfile  README.md  circle.yml  docker-compose.yml  main_requirements.txt  oauth_connector_quickstart.py  pyproject.toml  q  requirements-testing.txt  setup.cfg  setup.py  sonar-project.properties  tarek_test_http_api.py  test.py  test_requirements.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/docker_configs/: bashrc  ipython_startup.py
.devcontainer/vscode/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml
.ipynb_checkpoints/: Method forwarding in connectors-checkpoint.ipynb
connectors/: abstract_connector.py  abstrat_connector.py  connector.py  sql_connector.py
connectors/mongo/: mongo_connector.py  requirements.txt
connectors/mssql/: mssql_connector.py  requirements.txt
connectors/mysql/: __init__.py  mysql_connector.py  requirements.txt
connectors/postgres/: __init__.py  postgresql_connector.py  requirements.txt
doc/: DataSlice.md  Method forwarding in connectors.ipynb  PaginationInfo.md  adobe.md  adobe_analytics.md  azure_mssql.md  connection_manager.md  connectors.md  dataiku.md  elasticsearch.md  facebook_insights.md  generate.py  google_analytics.md  google_big_query.md  google_cloud_mysql.md  google_credentials.md  google_my_business.md  google_spreadsheet.md  hive.md  http_api.md  magento.md  metadata.md  micro_strategy.md  microstrategy.md  minio.md  mongo.md  mssql.md  mysql.md  odata.md  odbcconnector.md  oracle_sql.md  postgres.md  postrgres.md  sap_hana.md  snowflake.md  toucan_toco.md  toucantococonnector.md
doc/connectors/: ROK.md  adobe_analytics.md  aircall.md  aircall_2.md  aircall_oauth.md  anaplan.md  awsathena.md  azure_mssql.md  dataiku.md  elasticsearch.md  facebook_ads.md  github.md  google_analytics.md  google_big_query.md  google_cloud_mysql.md  google_my_business.md  google_sheets.md  google_sheets_2.md  google_spreadsheet.md  hive.md  http_api.md  hubspot.md  lightspeed.md  micro_strategy.md  mongo.md  mssql.md  mysql.md  net_explorer.md  odata.md  odbcconnector.md  one_drive.md  oracle_sql.md  postgres.md  quickstart_aircall.py  revinate.md  s3.md  salesforce.md  sap_hana.md  snowflake.md  spotify.md  (+2 more)
http-api/: pyvenv.cfg
quickstart/: README.md
quickstart/aircall/: README.md  helpers.py  quickstart.py
quickstart/github/: helpers.py  quickstart.py
quickstart/google_sheets_2/: README.md  quickstart.py
quickstart/rok/: quickstart_rok.py
templates/: cap.m4  connector.py  connector.py.m4  tests.py  tests.py.m4
test_soap/: salesforce.wsdl
tests/: conftest.py  docker-compose.yml  general_helpers.py  test_abstract_connector.py  test_auth.py  test_bases_connector.py  test_bases_datasource.py  test_common.py  test_connection_manager.py  test_connector.py  test_datasource.py  test_google_credentials.py  test_json_wrapper.py  test_numpy_version.py  test_pagination.py  test_pandas_translator.py  test_query_manager.py  test_retry_policy.py  test_secrets_common.py  test_snowflake_common.py  test_sql_query_helper.py
tests/adobe/: test_adobe_connector.py
tests/adobe_analytics/: test_adobe_analytics_connector.py
tests/aircall/: helpers.py  mock-results.py  mock_results.py  test_aircall.py  test_async_funcs.py  test_helpers.py  test_helpers_aircall.py
tests/aircall_2/: test_aircall_2.py  test_async_funcs.py
tests/aircall_oauth/: helpers.py  test_aircall_oauth.py  test_async_funcs.py  test_async_funcs_oauth.py  test_helpers_aircall_oauth.py
tests/anaplan/: test_anaplan.py
tests/awsathena/: test_athena_integration.py  test_awsathena.py
tests/azure_mssql/: test_azure_mssql.py  test_azure_mssql_connector.py
tests/clickhouse/: test_clickhouse.py
tests/databricks/: test_databricks.py
tests/dataiku/: test_dataiku_connector.py
tests/documentdb/: test_documentdb.py  test_documentdb_translator.py
tests/elasticsearch/: test_elasticsearch.py
tests/exampleconnector2/: test_exampleconnector2.py
tests/facebook_ads/: test_facebook_ads.py
tests/facebook_insights/: test_facebook_insights.py
tests/facebookads/: test_facebookads.py
tests/github/: conftest.py  test_github.py  test_helpers_github.py
tests/google_adwords/: test_google_adwords.py  test_helpers.py
tests/google_analytics/: test_google_analytics.py
tests/google_big_query/: test_google_big_query.py
tests/google_cloud_mysql/: test_google_cloud_mysql.py
tests/google_my_business/: test_google_my_business.py
tests/google_sheets/: sample-data-header.json  sample-data-meta.json  sample-data-values.json  sample-response.json  sheet-formats-animals.json  sheet-formats-sample-data.json  sheet-values-animals.json  sheet-values-sample-data.json  spreadsheet-animals.json  spreadsheet-sample-data.json  spreadsheet-sheets-properties.json  test_google_sheets.py  user-infos.json
tests/google_sheets_2/: test_google_sheets_2.py
tests/google_spreadsheet/: test_google_spreadsheet.py
tests/hive/: bootstrap-hive.sh  test_hive.py
tests/http_api/: test_authentication_configs.py  test_http_api.py
tests/hubspot/: test_hubspot.py
tests/hubspot_private_app/: test_hubspot.py
tests/linkedinads/: test_linkedinads.py
tests/magento/: test_magento.py
tests/micro_strategy/: test_microstrategy.py
tests/microstrategy/: test_microstrategy.py
tests/minio/: test_minio_connector.py
tests/mongo/: test_mongo.py  test_mongo_connector.py  (+1 more)
toucan_connectors/: __init__.py  abstract_connector.py  auth.py  bases.py  common.py  condition_translator.py  connection_manager.py  google_credentials.py  json_wrapper.py  pagination.py  pandas_translator.py  query_manager.py  redShift_common.py  secrets_common.py  snowflake_common.py  sql_query_helper.py  sql_query_manager.py  toucan_connector.py  toucan_pydantic_connector.py
utils/: test.py
(+224 files in other folders)
