[project]
authors = [{ name = "Toucan Toco", email = "dev@toucantoco.com" }]
license = { text = "BSD" }
requires-python = "<3.14,>=3.11"
dependencies = [
    "cached-property<3.0.0,>=1.5.2",
    "Jinja2<4.0.0,>=3.0.3",
    "pydantic<3.0.0,>=2.4.2",
    "requests<3.0.0,>=2.28.0",
]
name = "toucan-connectors"
version = "9.2.1"
description = "Toucan Toco Connectors"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["toucan_connectors*"]

[tool.setuptools]
include-package-data = true
# FIXME: temporary workaround until https://github.com/pypa/setuptools/issues/4759 is fixed
license-files = []

[tool.uv]
package = true

[project.optional-dependencies]
base = [
    "Authlib<2.0.0,>=1.3.2",
    "jq<2.0.0,>=1.2.2",
    "python-slugify>=5.0.2",
    "tenacity<10.0.0,>=8.0.1",
    "numpy<2; python_version < \"3.12\"",
    "numpy>=2; python_version >= \"3.12\"",
    "pandas<2; python_version < \"3.12\"",
    "pandas>=2; python_version >= \"3.12\"",
]
awsathena = ["awswrangler<4.0.0,>=3.3.0"]
azure_mssql = ["pyodbc<6,>=4", "sqlalchemy<3,>=2"]
clickhouse = ["clickhouse-driver<1.0,>=0.2.3", "sqlalchemy<3,>=2"]
dataiku = ["dataiku-api-client>=9.0.1"]
elasticsearch = ["elasticsearch>=9"]
google_analytics = [
    "google-api-python-client<3,>=2",
    "oauth2client<5.0.0,>=4.1.3",
]
github = ["python-graphql-client<1.0,>=0.4.3"]
google_big_query = ["google-cloud-bigquery[bqstorage,pandas]<4,>=3"]
google_cloud_mysql = ["PyMySQL<2.0.0,>=1.1.1"]
google_sheets = ["google-api-python-client<3,>=2", "oauth2client<5.0.0,>=4.1.3"]
http_api = [
    "oauthlib==3.3.1",
    "requests-oauthlib==2.0.0",
    "xmltodict<1.0,>=0.13.0",
]
hubspot = ["hubspot-api-client>=7.4,<13"]
mongo = ["pymongo>=3.12.0"]
mssql = ["pyodbc<6,>=4", "sqlalchemy<3,>=2"]
mysql = ["PyMySQL<2.0.0,>=1.1.1"]
odata = ["oauthlib==3.3.1", "requests-oauthlib==2.0.0", "tctc-odata<1.0,>=0.3"]
odbc = ["pyodbc<6,>=4"]
oracle_sql = ["cx-Oracle<9.0.0,>=8.3.0", "sqlalchemy<3,>=2"]
Redshift = ["lxml<6.1.0,>=4.6.5", "redshift-connector<3.0.0,>=2.0.907"]
peakina = ["peakina>=0.11"]
postgres = ["psycopg>=3.2.9,<4", "sqlalchemy<3,>=2"]
sap_hana = ["pyhdb<1.0,>=0.3.4", "sqlalchemy<3,>=2"]
snowflake = [
    "pyarrow",
    "PyJWT<3,>=1.5.3",
    "snowflake-connector-python<4.0.0,>=2.7.12",
]
soap = ["zeep<5.0.0,>=4.1.0", "lxml<6.1.0,>=4.6.5"]

all = [
    "Authlib<2.0.0,>=1.3.2",
    "awswrangler<4.0.0,>=3.3.0",
    "clickhouse-driver<1.0,>=0.2.3",
    "cx-Oracle<9.0.0,>=8.3.0",
    "dataiku-api-client>=9.0.1",
    "elasticsearch>=9",
    "google-api-python-client<3,>=2",
    "google-cloud-bigquery[bqstorage,pandas]<4,>=3",
    "hubspot-api-client>=7.4,<13",
    "jq<2.0.0,>=1.2.2",
    "lxml<6.1.0,>=4.6.5",
    "numpy<2; python_version < \"3.12\"",
    "numpy>=2; python_version >= \"3.12\"",
    "oauth2client<5.0.0,>=4.1.3",
    "oauthlib==3.3.1",
    "pandas<2; python_version < \"3.12\"",
    "pandas>=2; python_version >= \"3.12\"",
    "peakina>=0.11",
    "psycopg>=3.2.9,<4",
    "pyarrow",
    "pyhdb<1.0,>=0.3.4",
    "PyJWT<3,>=1.5.3",
    "pymongo>=3.12.0",
    "PyMySQL<2.0.0,>=1.1.1",
    "pyodbc<6,>=4",
    "python-graphql-client<1.0,>=0.4.3",
    "python-slugify>=5.0.2",
    "redshift-connector<3.0.0,>=2.0.907",
    "requests-oauthlib==2.0.0",
    "simplejson>=3.17.6,<4",
    "snowflake-connector-python<4.0.0,>=2.7.12",
    "sqlalchemy<3,>=2",
    "tctc-odata<1.0,>=0.3",
    "tenacity<10.0.0,>=8.0.1",
    "xmltodict<1.0,>=0.13.0",
    "zeep<5.0.0,>=4.1.0",
]


[dependency-groups]
dev = [
    "click<9.0.0,>=8.1.8",
    "cryptography>=40.0.2",
    "docker<8.0.0,>=7.1.0",
    "freezegun<1.6,>=1.5.1",
    "mock<6.0.0,>=5.1.0",
    "mypy<2.0,>=1.14",
    "pandas-stubs<3.0.0.0,>=2.2.3.241126",
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio<1,>=0.19.0",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-rerunfailures<16.0,>=15.0",
    "python-graphql-client<1,>=0.4.3",
    "PyYAML<7,>=6.0.1",
    "responses<1,>=0.21.0",
    "types-pyopenssl<25.0.0.0,>=24.1.0.20240722",
    "types-python-slugify<9.0.0.0,>=8.0.2.20240310",
    "types-requests<3.0.0.0,>=2.31.0.6",
    "types-simplejson<4.0.0.0,>=3.19.0.20241221",
    "types-pymysql<2.0.0.0,>=1.1.0.20241103",
    "ruff<0.12.8,>=0.12.7",
    "pre-commit<5.0,>=3.6",
    "types-oauthlib<4.0.0.0,>=3.2.0.20240217",
    "types-python-dateutil<2.10.0,>=2.9.0",
]

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"
follow_imports = "silent"
show_error_codes = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
files = [
    "toucan_connectors/auth.py",
    "toucan_connectors/awsathena/awsathena_connector.py",
    "toucan_connectors/azure_mssql/azure_mssql_connector.py",
    "toucan_connectors/common.py",
    "toucan_connectors/elasticsearch/elasticsearch_connector.py",
    "toucan_connectors/google_big_query/google_big_query_connector.py",
    "toucan_connectors/http_api/authentication_configs.py",
    "toucan_connectors/http_api/http_api_connector.py",
    "toucan_connectors/http_api/pagination_configs.py",
    "toucan_connectors/hubspot_private_app/hubspot_connector.py",
    "toucan_connectors/mongo/mongo_connector.py",
    "toucan_connectors/mssql/mssql_connector.py",
    "toucan_connectors/mysql/mysql_connector.py",
    "toucan_connectors/peakina/peakina_connector.py",
    "toucan_connectors/postgres/postgresql_connector.py",
    "toucan_connectors/redshift/redshift_database_connector.py",
    "toucan_connectors/snowflake/snowflake_connector.py",
    "toucan_connectors/snowflake_oauth2/snowflake_oauth2_connector.py",
    "toucan_connectors/toucan_connector.py",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "N", "C", "B", "I001", "S", "Q"]
ignore = [
    "S101", # allow use of assert
    # FIXME: S105, S106, S608 and S113 should be addressed
    "S105",
    "S106", # possible hardcoded password
    "S608", # possible SQL injection
    "S113", # requests call without timeout
    "N801", # class names
    "N802", # function names
    "N818", # exception names
    "B017", # pytest.raises(Exception)
    "C901", # complexity
]
