[metadata]
name = toucan_connectors
description = Toucan Connectors
author = Toucan Toco
url = https://github.com/ToucanToco/toucan-connectors
version = 0.0.1
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    toucan_data_sdk

[options.extras_require]
mongo =
    pymongo==3.6.1
mssql =
    pymssql==2.1.3
mysql =
    PyMySQL==0.8.0
postgres =
    psycopg2==2.7.4

test =
    docker==3.1.1
    pytest==3.4.2
    pytest-cov==2.5.1
    pytest-mock==1.7.1
    pytest-pep8==1.0.6
    pytest-sugar==0.9.1
    python-slugify==1.2.4
    PyYAML==3.12

    pymongo==3.6.1
    pymssql==2.1.3
    PyMySQL==0.8.0
    psycopg2==2.7.4

[tool:pytest]
addopts = --no-pull -s -v --pep8 --cov=toucan_data_sdk
pep8maxlinelength = 100